--- a/src/Gallary/Gallary.module.css
+++ b/src/Gallary/Gallary.module.css
@@ -163,6 +163,7 @@
    
     padding: 0.5rem;
 }
+ .section {min-height: 100%};
 }
 
 
